2007-09-19  Andreas Kupries  <andreask@activestate.com>

	* pluginmgr.man: Fixed typo in the example, used the wrong
	  dot-path (.../plugins, should be .../plugin). Thanks to Jeremy
	  Cowgar for finding this.

2007-09-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.10 ========================
	* 

2007-06-22  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pluginmgr.tcl: Replaced deprecated {expand} syntax in comments
	  with {*}.

2007-03-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pluginmgr.man: Fixed all warnings due to use of now deprecated
	  commands. Added a section about how to give feedback.

2006-10-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.9 ========================
	* 

2005-10-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.8 ========================
	* 

2005-07-07  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pluginmgr.tcl: Added and documented option -setup,
	* pluginmgr.man: and clone method.

2005-06-17  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pluginmgr.tcl: Validation now reports missing API commands. Set
	  plugin name before external check, so that the callback can use
	  'do' when inspecting the plugin. Command setup has no need for
	  alias deletion, interpreters are always new and clean.

	* plugin.tcl: Changed completely to a package based approach,
	* plugin.man: using the safe base for proper package
	  handling. Plugins are packages. Framework has to perform only
	  validation and initialization, not search.

2005-04-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* plugin.tcl: Updated to changed method names in path, added
	* plugin.man: method 'interpreter', and fixed bug in alias
	  creation.

2005-04-11  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
